--- a/container/package.json
+++ b/container/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "products",
-  "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
   "dependencies": {
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
+  "name": "container",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "faker": "^5.5.3"
-  }
+  "description": ""
 }
